<resources>
    <string name="app_name">MVVMSampleApp</string>
    <string name="mvvm_icon">MVVM</string>
    <string name="email">firoz@gmail.com</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?\nSign Up Here</string>
</resources>
